fix(play): make visual responsiveness of API response better on small screens

--- a/src/pages/play/play.scss
+++ b/src/pages/play/play.scss
@@ -41,14 +41,14 @@ page-play {
     user-select: text;
     box-shadow: inset 0px 2px 10px #ccc;
     margin-bottom: 32px;
-    max-height: 36em;
+    max-height: 78vh;
     overflow: auto;
   }
 
-  @media screen and (max-width: 739px) {
+  @media screen and (max-width: 576px) {
     
     .response {
-      max-width: 92vw;
+      max-width: 90vw;
     }
   }
 
